# Retrieval-Augmented-Generation

./: Dockerfile  README.md
Document-RAG/: .dockerignore  .gitignore  Dockerfile  MODERNIZATION.md  README.md  debug_uuid.py  dummy.txt  dummy_test.txt  gradio_app.py  pyproject.toml  requirements.txt  scratch_test.py  test_api.py  test_builtins.py  test_wiki.py  trigger_error.py  url.txt
Document-RAG/api/: main.py
Document-RAG/frontend/: package-lock.json
Document-RAG/frontend/src/: App.jsx  index.css
Document-RAG/frontend/src/components/: ChatWindow.jsx  Sidebar.jsx
Document-RAG/src/config/: config.py
Document-RAG/src/document_ingestion/: document_processor.py
Document-RAG/src/graph_builder/: graph_builder.py
Document-RAG/src/node/: reactnode.py
Document-RAG/src/state/: rag_state.py
Document-RAG/src/vectorstore/: vectorstore.py
RAG-Evaluation/: .dockerignore  .gitignore  evaluator.py
RAG-Evaluation/implementation/: answer.py  ingest.py
week5/: Dockerfile  day4.ipynb  pyproject.toml
week5/evaluation/: eval.py
